# pygeoprocessing

./: .hgflow  .hgignore  .readthedocs.yml  .travis.yml  HISTORY.rst  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  bitbucket-pipelines.yml  bootstrap_invest_environment.py  lots_of_lakes.py  pavement.py  pyproject.toml  raster_expression_tracer.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_pit_fill.py  test_stream_extraction.py  test_suite_windows.bat  tox-libcompat.ini  tox.ini  trace_merge.py  versioning.py  versions.json
.github/workflows/: auto-pr-from-master-into-releases.yml  build-py-dists.yml  buildwheels.yml  pythonpackage.yml
ci/: bugfix-release-pr-body.md
docs/: Makefile  api.rst  conf.py  environment-rtd.yml  index.rst  installation.rst  make.bat  testing.rst  tutorial.rst
docs/modules/: geoprocessing.rst  routing.rst
docs/source/: basic_usage.rst  conf.py  examples.rst  index.rst  installing.rst  package-testing.rst  sampledata.rst  testing.rst
docs/source/_static/: custom.css
natcap/: __init__.py
natcap/geoprocessing/: __init__.py  versioning.py
natcap/geoprocessing/tests/: smoke_test.py
pygeoprocessing/: OutOfCoreDeque.cpp  OutOfCoreDeque.h  __init__.py  cli.py  fileio.py  geoprocessing.py  geoprocessing_core.pyx
pygeoprocessing-docker/: Dockerfile  install-conda-environment.sh  install-environment.sh  install-pip-packages.sh
pygeoprocessing/routing/: OutOfCoreDeque.cpp  OutOfCoreDeque.h  __init__.py  routing.py  routing_core.pxd  routing_core.pyx
pygeoprocessing/testing/: __init__.py  assertions.py  data_storage.py  sampledata.py  scm.py  testcase_writing.py  utils.py
pygeoprocessing/tests/: __init__.py  sampledata_test.py  smoke_test.py  test_suite.py  testing_test.py
src/pygeoprocessing/: FastFileIterator.h  FastFileIteratorIndex.h  __init__.py  extensions.pxd  fileio.py  geoprocessing.py  geoprocessing_core.cpp  geoprocessing_core.pyx  kernels.py  queuehandler.py  slurm_utils.py  symbolic.py  utils.py
src/pygeoprocessing/extensions/: FastFileIterator.h  ManagedRaster.h  __init__.py  extensions.pxd
src/pygeoprocessing/multiprocessing/: __init__.py  raster_calculator.py
src/pygeoprocessing/routing/: LRUCache.h  __init__.py  helper_functions.py  routing.cpp  routing.py  routing.pyx  routing_core.pyx  watershed.cpp  watershed.pyx
src/pygeoprocessing/routing_old/: routing_core.pyx
src/pygeoprocessing/testing/: __init__.py  assertions.py  sampledata.py  scm.py  utils.py
tests/: get_data.py  sampledata_test.py  svn_config.json  test_geoprocessing.py  test_kernels.py  test_pygeoprocessing.py  test_pygeoprocessing_1_0.py  test_routing.py  test_sampledata.py  test_slurm_utils.py  test_suite.py  test_testing.py  test_watershed_delineation.py  testing_test.py
tests/test_data/: raster.tif  small_vector.gpkg
